--- a/css/set1.css
+++ b/css/set1.css
@@ -19,6 +19,16 @@
 	
 }
 
+
+#pane {
+	
+font : 20pt Franklin Gothic Book;
+position: relative;
+background-align: center;
+text-align: justify;
+color : #000000;
+} 
+
 /* Common style */
 .grid figure {
 	position: relative;
@@ -1156,3 +1166,4 @@ figure.effect-chico:hover p {
 		width: 100%;
 	}
 }
+
