--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,7 @@ a.scrollup:hover{
   Snippet by:- Vijay Sasavadiya;
   e-mail:- vijaysasavadiya.vs@gmail.com;
 */
-
+/*estilos del menu*/
 /*.navbar-default{background-color:#fff;border-left:none;border-right:none;-webkit-border-radius:0;-moz-border-radius:0;-ms-border-radius:0;-o-border-radius:0;border-radius:0}
 .navbar-nav{margin-top:0;margin-bottom:0}
 .navbar-brand{padding-top:2px;padding-bottom:2px;height:60px}
