actualización de los archivos index y style
Actualización de los archivos index y style, se actualiza el menu

--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ a.scrollup{
 a.scrollup:hover{
 	opacity:1;
 	background-color:#36CBD4;
-	color:#fff;;	
+	color:#fff;	
 }
 /*
   Snippet by:- Vijay Sasavadiya;
