--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ a.navbar-brand span {
 .btn:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #36CBD4;
+  background-color: #005883;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
